--- a/README
+++ b/README
@@ -20,7 +20,8 @@ Supported Games
 * Newer Summer Sun (riivolution) [SMN?06]
 * Newer Holiday Special (riivolution) [SMN?07]
 * Epic Super Bower World (riivolution) [SMN?08]
-* Koopa Country (riivolution) [SMN?09]
+* Koopa Country (riivolution) [SMN?10]
+* New Super Mario Bros. 4 (riivolution) [SMN?11]
 * The Legend of Zelda: Parallel Worlds (ips)
 
 Default Searchpaths:
