--- a/README
+++ b/README
@@ -21,6 +21,7 @@ Supported Games
 * Epic Super Bower World (riivolution) [SMN?08]
 * Koopa Country (riivolution) [SMN?10]
 * New Super Mario Bros. 4 (riivolution) [SMN?11]
+* New Super Mario Bros. Wii Retro Remix [MRR?01]
 * The Legend of Zelda: Parallel Worlds (ips)
 
 Default Searchpaths:
