add opening titles for NSMBW 4 and Retro Remix (PAL, US) by alejandroues

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+v2.5:
+- add opening titles for NSMBW 4 and Retro Remix (PAL, US) by alejandroues
+
 v2.4:
 - fixed downloading NewerSMBW
 - added support for New Super Mario Bros. Wii Retro Remix
