--- a/README
+++ b/README
@@ -13,6 +13,7 @@ own the original, you can't blame me. patchimage is 100% legal, as it
 does not contain any propritary contents, nor is able to grab them.
 
 Supported Games
+* NSMBW3: The Final Levels [SLF?01]
 * Newer SMBW (riivolution) [SMN?03]
 * Cannon SMBW (riivolution) [SMN?04]
 * Another SMBW (riivolution) [SMN?05]
