--- a/README
+++ b/README
@@ -13,7 +13,7 @@ own the original, you can't blame me. patchimage is 100% legal, as it
 does not contain any propritary contents, nor is able to grab them.
 
 Supported Games
-* NSMBW3: The Final Levels [SLF?01]
+* NSMBW3: The Final Levels (riivolution) [SLF?01]
 * Newer SMBW (riivolution) [SMN?03]
 * Cannon SMBW (riivolution) [SMN?04]
 * Another SMBW (riivolution) [SMN?05]
@@ -22,7 +22,8 @@ Supported Games
 * Epic Super Bower World (riivolution) [SMN?08]
 * Koopa Country (riivolution) [SMN?10]
 * New Super Mario Bros. 4 (riivolution) [SMN?11]
-*Super Mario: Mushroom Adventure PLUS - Winter Moon [SMM?02]
+* Super Mario: Mushroom Adventure PLUS - Winter Moon (riivolution) [SMM?02]
+* Super Mario Vacation (riivolution) [SMV?01]
 * New Super Mario Bros. Wii Retro Remix [MRR?01]
 * The Legend of Zelda: Parallel Worlds (ips)
 
