--- a/README
+++ b/README
@@ -12,62 +12,20 @@ script uses files as "unzip" creates them. No need to modify whatever.
 own the original, you can't blame me. patchimage is 100% legal, as it
 does not contain any propritary contents, nor is able to grab them.
 
-Supported Games
-* NSMBW3: The Final Levels (riivolution) [SLF?01]
-* Newer SMBW (riivolution) [SMN?03]
-* Cannon SMBW (riivolution) [SMN?04]
-* Another SMBW (riivolution) [SMN?05]
-* Newer Summer Sun (riivolution) [SMN?06]
-* Newer Holiday Special (riivolution) [SMN?07]
-* Epic Super Bower World (riivolution) [SMN?08]
-* Koopa Country (riivolution) [SMN?10]
-* New Super Mario Bros. 4 (riivolution) [SMN?11]
-* Super Mario: Mushroom Adventure PLUS - Winter Moon (riivolution) [SMM?02]
-* Super Mario Vacation (riivolution) [SMV?01]
-* New Super Mario Bros. Wii Retro Remix [MRR?01]
-* The Legend of Zelda: Parallel Worlds (ips)
+More information:
+	* supported games: 		see file README.GAMEIDS
+	* supported commandline flags:	see file README.CMD_OPTS
+	* configuration file example:	see file README.RC
+	* status code while processing:	see file README.STATUS_CODES
+	* exit codes (for debugging):	see file README.EXIT_CODES
 
-Default Searchpaths:
+Default searchpaths:
 
     ISO: BASE.iso / BASE.wbfs / GAMEID.iso / GAMEID.wbfs
     Riivolution: Original name of the zip / unpacked folder
     ROM: some mask matching the file (eg: "*[Ll]ink*[Pp]ast*smc" for Zelda: Parallel Worlds)
 
-Parameters
---game={NewerSMB;NewerSummerSun;AnotherSMBW;HolidaySpecial;ParallelWorlds...}
-specify game to create (if none is provided, the script will ask you)
-
---iso/--rom=/home/test/<Image>
-specify path to the original ISO/ROM
-
---riivolution/--patch=<Patch>
-specify path to Riivolution/Patch files
-
---version=EURv1,EURv2,USAv1,USAv2,JPNv1
-specify your game version (for Wii games, if auto-detection fails)
-
---customdid=SMNP02
-specify a custom ID to use for the game
-
---sharesave
-let modified game share savegame with original game
-
---download
-download riivolution/patchfiles
-
---soundtrack
-download soundtrack (if available) and exit
-
---banner=<banner>
-specify a custom banner to use
-
---download-banner
-download a custom banner (if available)
-
---clean
-cleanup working directory from anything (also riivolution patches)
-
-Examples:
+Example usage:
 
 NewerSMBW:
 $ patchimage --game=NewerSMBW --iso=/home/test/SMNP01.iso --download
