--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (4.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@tuxfamily.org>  Sun, 12 Oct 2013 10:27:31 +0200
+
 patchimage (3.1-1nano) unstable; urgency=low
 
   * new upstream stable release
