--- a/README
+++ b/README
@@ -37,6 +37,7 @@ License: GNU GPLv3
 Extra Licenses:
 
 > wit GNU GPL v2
+> szs GNU GPL v2
 > uips GNU GPL v2
 > applyppf3 as-is
 > xml-patchfiles as-is
