--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (5.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@tuxfamily.org>  Sun, 18 May 2014 09:03:04 +0200
+
 patchimage (4.0-1nano) unstable; urgency=low
 
   * new upstream stable release
