proper error handling in new modules

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
-v5.0.2:
+v5.1.0:
 - remove MKWIIMM_GAME_LANG from patchimage.rc (sets the language
   for the patcher only, so not required at all) Thanks @Leseratte
   for the hint.
 - fixup debian packaging scripts
+- add exit code 69 (wiimmfi failed) and 75 (wrong user-input)
+- proper error-code providing and exiting in mario kart wiimm,
+  mario kart wiimm font, mario kart wiimm items, wiimmfi mario
+  kart and wiimmfi generic modules
 
 v5.0.1:
 - fix bug in mario kart wiimm items (did not properly work)
