--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+v5.2.0:
+- add support for SMN?MI (Midi's Super Mario Wii - Just A Little
+  adventure)
+- add support for SMN?DU DarkUmbra SMB Anniversary Edition
+- add support for SMN?ZA Newer Apocalypse
+
 v5.1.0:
 - remove MKWIIMM_GAME_LANG from patchimage.rc (sets the language
   for the patcher only, so not required at all) Thanks @Leseratte
