--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (5.2.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Sun, 10 Aug 2014 22:38:50 +0200
+
 patchimage (5.1.0-1nano) unstable; urgency=low
 
   * new upstream stable release
