--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,20 @@
 v5.4.0:
+- update wit to version 2.31a
+- update szs to version 1.39a
 - add support for MKWiimm 2015-03
+- add support for replacing karts in MKWiimm
+  No vehicles were harmed during the making of this feature
 - add support for SMN?41 (Devil Mario Winter Special)
 - add support for SMN?31 (New Super Mario Bros. Wii - Other World)
+- add MKWIIMM_OVERRIDE_SZS variable to patchimage.rc
+  if set to TRUE patchimage will override the supplied SZS tools
+  of the MKWiimm patcher with it's own version of the tools.
+  .
+  This is useful when the supplied ones don't work with your system's
+  libpng (usually this happens on Debian GNU/Linux).
+  .
+  If patching anything older than RMCP23 (pre-wiimmfi versions) the tools
+  will always be overriden (because they are ancient).
 
 v5.3.0:
 - update wit to 2.30a
