--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 v6.0.0:
 - update szs to version 1.40a
 - add support for MKWiimm 2015-05
+- support for replacing characters in NSMBW
 
 v5.4.0:
 - fixed major bug creating MKWiimm: image was not saved to proper
