--- a/ChangeLog
+++ b/ChangeLog
@@ -21,7 +21,8 @@ v6.1.0:
 - support for Ghostly Super Mario Boos. Wii (SMN?65)
 - update wit/wszst override for MKWiimm
   - if you can't build MKWiimm, set MKWIIMM_OVERRIDE_SZS=TRUE
-    in ~/.patchimage.rc to use supplied tools
+    in ~/.patchimage.rc to use supplied tools, that the case
+    on Debian GNU/Linux Stretch or Sid
 
 v6.0.0:
 - update szs to version 1.40a
