--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 v6.2.0:
 - code improvements for MKWiimm
 - supply xdelta3 (32 and 64 bit versions)
+- supply titledumper (32 and 64 bit versions), for use with ddd
 - add support for Tokyo Mirage Sessions #FE US/EUR decensoring
 - use ${WIT} instead of wit when checking image region for
   MKWiimm and Kirbys Adventure Wii
