--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (6.2.0-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Sat, 02 Jul 2016 10:45:54 +0200
+
 patchimage (6.1.0-1nano) unstable; urgency=low
 
   * new upstream stable release
