--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+patchimage (6.2.1-1nano) unstable; urgency=low
+
+  * new upstream stable release
+
+ -- Christopher Roy Bratusek <nano@jpberlin.de>  Sun, 03 Jul 2016 12:21:38 +0200
+
 patchimage (6.2.0-1nano) unstable; urgency=low
 
   * new upstream stable release
