update szs to 1.52

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ v6.2.1:
 - update MKWiimm 2016-02 to v2
 - update Tokyo Mirage Sessions #FE patcher for version
   0.9.4 of the patch
+- update szs to 1.52
 
 v6.2.0:
 - code improvements for MKWiimm
