--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+v6.3.0:
+- supply ctrtool (32 and 64 bit versions)
+- supply 3dstool (32 and 64 bit versions)
+- support for Pokemon Neo X
+- support for Pokemon Neo Y
+
 v6.2.2:
 - when running patchimage from git, use it's tools, scripts and stuff,
   instead of system-wide (if) installed
